fixing overflow

--- a/style.css
+++ b/style.css
@@ -51,7 +51,6 @@
 .bloglist {
     margin: 10px;
     padding: 10px;
-    overflow: hidden;
     background-color: #fff;
 }
 
